1.0 @ 4th of July 2012
  marcel@blava.net
    - sidebar implemented (thanks for inspisration from h3rman@gmail.com)
    - got rid of ereg() and eregi() and moved all functions to preg_match() - (thanks for noticing goes to oleg@loco.com.ua)
    - got rid of another batch of apache errors (thanks for feedback from ecasarero@gmail.com)
0.12 @ 25th of Jun 2012
  marcel@blava.net
    - fixed code so there are no E_NOTICE messages from PHP in webserver logs if enabled (thanks for inspiration goes to mareczky.bela@gmail.com)
    - favicon added in a image of a small maps marker
    - this version has never been officialy released
0.11 @ 22nd of Jun 2012
  marcel@blava.net
    - added config-proofing for nagios object config files (thanks to fernando.henrique@nec.com.br)
    - fixed issues with exclamation marks in hostnames - now such hostnames are ignored (thanks to nicolas.ord@gmail.com)
    - now we finally suppot multiple parents! (thanks for inspiration from Peter.Groselj@telekom.si)
    - fixed issue where hosts have no parents (thanks to oleg@loco.com.ua)
  Benjamin.Weiss@osbi.ok.gov
    - added color-changing links to hosts if host is not reachable / down
0.10 @ 21st of Jun 2012
  tommy@sectra.com:
    - set higher z-index for red and yellow markers
    - added refresh (index page refreshes every 300 seconds)
    - added proof-of-concept code to monitor services
  marcel@blava.net:
    - nagios configuration can be stored in multiple files of one folder - NagMap now reads nagios.cfg file!
    - reviewed call.php script
    - fixed problems with displaying maps when host had whitespace in name (thanks for bugreport goes to Nick Dawson)
    - added informational message if NagMaps fails to display anything
    - changed link color to light blue instead of red

0.9 @ 9th of Aug 2011 - marcel@blava.net
fixed some trivial, stupid bugs and made more compatible with SuSE and RHEL

0.8 @ 27.Apr.2011 @ marcel@blava.net
added support for non-standard formats of hosts files