@@ -3,6 +3,7 @@
     - sidebar implemented (thanks for inspisration from h3rman@gmail.com)
     - got rid of ereg() and eregi() and moved all functions to preg_match() - (thanks for noticing goes to oleg@loco.com.ua)
     - got rid of another batch of apache errors (thanks for feedback from ecasarero@gmail.com)
+    - config file contains option for Google maps type
 0.12 @ 25th of Jun 2012
   marcel@blava.net
     - fixed code so there are no E_NOTICE messages from PHP in webserver logs if enabled (thanks for inspiration goes to mareczky.bela@gmail.com)
